Changes since CEXP-2.0.beta
 2010/02/17:
 - libtecla/getline.c: always include <sys/ioctl.h> (also under __rtems__)
   in order to get TIOCGWINSZ.
   Maintain 'signals_overridden' flag also under __rtems__.
 2010/02/07:
 - libtecla/configure.in: added --enable-ansiterm configure option (enabled
   by default for RTEMS if not explicitly disabled and disabled by default
   on other OSes) to avoid dependency on curses/termcap (assuming ANSI
   terminal).
 2009/12/14:
 - BUGFIX: cexpsh("script") would not terminate because of missing 'else'
   in nested if (which should have been 'else if'). This was a new bug
   introduced with the '-c' option.
 2009/12/04:
 - fixed all reduce/reduce and some shift/reduce conflicts in
   the grammar.
 - added stdio redirection.
 - deprecated '<' for sourceing scripts; should now use '.'
 - now have a dedicated FILE descriptor for parser error messages
   (can be passed to cexpCreateParserCtx())
 - added new callback argument to cexpCreateParserCtx() which
   allows the user to be notified when stdio redirection occurs.
 - added new '-c' option instructing cexpsh() to parse the option
   string argument.
 2009/12/02:
 - pmelf: bugfix in PPC attribute matcher;
 - pmelf: added support for Tag_GNU_Power_ABI_Struct_Return.
 - bfdstuff.c: added undocumented global variable
   '_cexpForceIgnoreObjAttrMismatches' which can be set to nonzero
   in order to force the BFD loader to ignore object attribute
   mismatches.
 2009/06/25: 
 - pmelf: added basic support for SPARC

Changes since CEXP-1.6.beta

 2008/10/8:
 - Removed most targets from toplevel 'Makefile' (were broken by latest
   changes). User must use 'configure' him-/herself.
 2008/10/8:
 - Added support for loading modules with weak undefined symbols
   (we treat them like newly defined COMMON symbols).
 2008/10/7:
 - Added checks dealing with zero-sized memory segments.
 - Added support for getting result + status of last evaluation.